fix: little fix on testGetSessionsByDateRange